--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="ar" dir="rtl">
+<html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>مولّد سؤال → JSON</title>
+  <title>Question → JSON Generator</title>
   <style>
     :root{
       --bg:#0b1220;
@@ -19,21 +19,35 @@
       --mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
       --sans: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
     }
+
     *{box-sizing:border-box}
+
     body{
       margin:0;
       font-family:var(--sans);
-      background: radial-gradient(1200px 600px at 80% -10%, rgba(96,165,250,.25), transparent 60%),
-                  radial-gradient(900px 500px at 20% 0%, rgba(94,234,212,.18), transparent 55%),
+      background: radial-gradient(1200px 600px at 85% -10%, rgba(96,165,250,.25), transparent 60%),
+                  radial-gradient(900px 500px at 15% 0%, rgba(94,234,212,.18), transparent 55%),
                   var(--bg);
       color:var(--text);
       line-height:1.5;
+      direction:ltr;
+      text-align:left;
     }
+
     .wrap{max-width:1100px; margin:28px auto; padding:0 16px;}
-    header{display:flex; gap:14px; align-items:flex-start; justify-content:space-between; flex-wrap:wrap;}
+
+    header{
+      display:flex;
+      gap:14px;
+      align-items:flex-start;
+      justify-content:space-between;
+      flex-wrap:wrap;
+    }
+
     .title{display:flex; flex-direction:column; gap:6px;}
     h1{font-size:22px; margin:0; letter-spacing:.2px}
     p.sub{margin:0; color:var(--muted); font-size:14px}
+
     .grid{display:grid; grid-template-columns: 1.05fr .95fr; gap:16px; margin-top:16px;}
     @media (max-width: 980px){ .grid{grid-template-columns:1fr;}}
 
@@ -45,10 +59,12 @@
       box-shadow:var(--shadow);
       overflow:hidden;
     }
+
     .card h2{font-size:16px; margin:0; padding:14px 16px; border-bottom:1px solid var(--border)}
     .card .content{padding:14px 16px;}
 
     label{display:block; font-size:13px; color:var(--muted); margin:12px 0 6px}
+
     input, textarea, select{
       width:100%;
       padding:10px 12px;
@@ -58,14 +74,29 @@
       color:var(--text);
       outline:none;
       transition: .15s border-color, .15s box-shadow;
+      direction:ltr;
+      text-align:left;
     }
-    textarea{min-height:140px; resize:vertical; font-family:var(--sans)}
-    input:focus, textarea:focus, select:focus{border-color: rgba(94,234,212,.55); box-shadow: 0 0 0 4px rgba(94,234,212,.14)}
+
+    textarea{
+      min-height:160px;
+      resize:vertical;
+      font-family:var(--mono);
+      white-space:pre;
+      tab-size:2;
+      line-height:1.55;
+    }
+
+    input:focus, textarea:focus, select:focus{
+      border-color: rgba(94,234,212,.55);
+      box-shadow: 0 0 0 4px rgba(94,234,212,.14)
+    }
 
     .row{display:grid; grid-template-columns: 1fr 1fr; gap:12px}
     @media (max-width: 520px){ .row{grid-template-columns:1fr;}}
 
     .choices{display:grid; gap:10px; margin-top:6px}
+
     .choice{
       display:grid;
       grid-template-columns: 28px 1fr;
@@ -76,10 +107,11 @@
       border-radius:14px;
       background: rgba(255,255,255,.04);
     }
+
     .choice input[type="radio"]{width:18px; height:18px; accent-color: var(--accent);}
-    .choice input[type="text"]{padding:10px 10px}
 
     .toolbar{display:flex; gap:10px; flex-wrap:wrap; align-items:center; margin-top:14px}
+
     button{
       border:0;
       cursor:pointer;
@@ -90,17 +122,20 @@
       background: linear-gradient(180deg, rgba(255,255,255,.2), rgba(255,255,255,0)), var(--accent);
       box-shadow: 0 10px 18px rgba(94,234,212,.18);
     }
+
     button.secondary{
       color:var(--text);
       background: rgba(255,255,255,.08);
       box-shadow:none;
       border:1px solid rgba(255,255,255,.12);
     }
+
     button.danger{
       color:#2a0b10;
       background: linear-gradient(180deg, rgba(255,255,255,.18), rgba(255,255,255,0)), var(--danger);
       box-shadow: 0 10px 18px rgba(251,113,133,.18);
     }
+
     .hint{font-size:12px; color:var(--muted)}
 
     pre{
@@ -113,9 +148,13 @@
       line-height:1.6;
       overflow:auto;
       white-space:pre;
+      direction:ltr;
+      text-align:left;
     }
+
     .status{font-size:12px; color:var(--muted)}
     .status b{color:var(--accent)}
+
     .pill{
       display:inline-flex;
       gap:8px;
@@ -127,6 +166,7 @@
       color:var(--muted);
       font-size:12px;
     }
+
     .pill span.dot{width:8px;height:8px;border-radius:999px;background:var(--accent2);display:inline-block}
     .kbd{font-family:var(--mono); font-size:12px; padding:2px 6px; border-radius:8px; border:1px solid rgba(255,255,255,.16); background: rgba(255,255,255,.06)}
   </style>
@@ -135,27 +175,27 @@
   <div class="wrap">
     <header>
       <div class="title">
-        <h1>صفحة تفاعلية لإدخال سؤال MCQ وتوليد JSON</h1>
-        <p class="sub">اكتب السؤال والخيارات وحدّد الإجابة الصحيحة — وسيظهر الـ JSON بالأسفل مباشرة. (يدعم النسخ بنقرة واحدة)</p>
+        <h1>Interactive MCQ → JSON Generator (LTR)</h1>
+        <p class="sub">Fill the fields and the JSON will update instantly below. (Copy with one click)</p>
       </div>
-      <div class="pill" title="يُحدَّث JSON تلقائيًا مع كل تغيير">
+      <div class="pill" title="JSON updates as you type">
         <span class="dot"></span>
-        تحديث مباشر
+        Live update
       </div>
     </header>
 
     <div class="grid">
       <!-- Input Card -->
       <section class="card" aria-label="Form">
-        <h2>إدخال البيانات</h2>
+        <h2>Input</h2>
         <div class="content">
           <div class="row">
             <div>
-              <label for="studentName">اسم الطالب</label>
-              <input id="studentName" type="text" placeholder="مثال: Abdalmohaymen Alesmaeel" />
+              <label for="studentName">Student Name</label>
+              <input id="studentName" type="text" placeholder="e.g., Abdalmohaymen Alesmaeel" />
             </div>
             <div>
-              <label for="level">المستوى (1–10)</label>
+              <label for="level">Level (1–10)</label>
               <select id="level">
                 <option value="1">1</option>
                 <option value="2">2</option>
@@ -171,19 +211,16 @@
             </div>
           </div>
 
-          <label for="question">نص السؤال</label>
-          <textarea id="question" placeholder="اكتب نص السؤال هنا...\n\nيمكنك إدراج كود Java داخل النص كما في المثال."></textarea>
+          <label for="question">Question Text (you can include Java code)</label>
+          <textarea id="question" placeholder="Type the question here...\n\nExample:\nint x = 1;\nfor (...) { ... }"></textarea>
 
-          <label>الخيارات</label>
-          <div class="choices" id="choices">
-            <!-- choice rows injected -->
-          </div>
+          <label>Choices (select the correct answer)</label>
+          <div class="choices" id="choices"></div>
 
           <div class="toolbar">
-            <button id="copyBtn" type="button">نسخ JSON</button>
-            <button id="downloadBtn" class="secondary" type="button">تحميل JSON</button>
-            <button id="resetBtn" class="danger" type="button">مسح الحقول</button>
-            <span class="hint">اختصار النسخ: <span class="kbd">Ctrl</span> + <span class="kbd">C</span> بعد تحديد النص، أو زر النسخ أعلاه.</span>
+            <button id="copyBtn" type="button">Copy JSON</button>
+            <button id="resetBtn" class="danger" type="button">Reset</button>
+            <span class="hint">Tip: After selecting output text you can use <span class="kbd">Ctrl</span> + <span class="kbd">C</span>.</span>
           </div>
           <div class="status" id="status" aria-live="polite"></div>
         </div>
@@ -191,10 +228,10 @@
 
       <!-- Output Card -->
       <section class="card" aria-label="JSON Output">
-        <h2>الـ JSON الناتج</h2>
+        <h2>Output JSON</h2>
         <div class="content">
-          <div class="status">الإجابة الصحيحة الحالية: <b id="answerLabel">A</b> (index: <b id="answerIndex">0</b>)</div>
-          <p class="sub" style="margin-top:8px">هذا هو الـ JSON بصيغة منسّقة (pretty / padded) كما تريد.</p>
+          <div class="status">Current correct answer: <b id="answerLabel">A</b> (answerIndex: <b id="answerIndex">0</b>)</div>
+          <p class="sub" style="margin-top:8px">Pretty-printed JSON (2-space indentation).</p>
         </div>
         <pre id="output" tabindex="0"></pre>
       </section>
@@ -212,21 +249,19 @@
       answerIndex: document.getElementById('answerIndex'),
       status: document.getElementById('status'),
       copyBtn: document.getElementById('copyBtn'),
-      downloadBtn: document.getElementById('downloadBtn'),
       resetBtn: document.getElementById('resetBtn')
     };
 
     const LETTERS = ['A','B','C','D'];
 
-    // Create 4 choice rows
     function buildChoices() {
       els.choicesWrap.innerHTML = '';
       for (let i = 0; i < 4; i++) {
         const row = document.createElement('div');
         row.className = 'choice';
         row.innerHTML = `
-          <input type="radio" name="answer" value="${i}" ${i===0?'checked':''} aria-label="الإجابة الصحيحة ${LETTERS[i]}" />
-          <input type="text" data-choice="${i}" placeholder="الخيار ${LETTERS[i]}" />
+          <input type="radio" name="answer" value="${i}" ${i===0?'checked':''} aria-label="Correct answer ${LETTERS[i]}" />
+          <input type="text" data-choice="${i}" placeholder="Choice ${LETTERS[i]}" />
         `;
         els.choicesWrap.appendChild(row);
       }
@@ -238,7 +273,6 @@
     }
 
     function sanitizeChoices(arr) {
-      // Ensure array of 4 strings; if empty, keep empty string
       const out = new Array(4).fill('');
       for (let i = 0; i < 4; i++) out[i] = (arr[i] ?? '').toString();
       return out;
@@ -247,7 +281,6 @@
     function update() {
       const choiceInputs = [...document.querySelectorAll('input[data-choice]')];
       const choices = sanitizeChoices(choiceInputs.map(i => i.value.trim()));
-
       const answerIndex = getSelectedAnswerIndex();
 
       const obj = {
@@ -260,16 +293,14 @@
 
       els.answerIndex.textContent = String(answerIndex);
       els.answerLabel.textContent = LETTERS[answerIndex] ?? 'A';
-
-      els.output.textContent = JSON.stringify(obj, null, 2); // pretty padding
+      els.output.textContent = JSON.stringify(obj, null, 2);
     }
 
     async function copyJSON() {
       try {
         await navigator.clipboard.writeText(els.output.textContent);
-        setStatus('تم النسخ إلى الحافظة ✅');
+        setStatus('Copied to clipboard ✅');
       } catch {
-        // Fallback
         const range = document.createRange();
         range.selectNodeContents(els.output);
         const sel = window.getSelection();
@@ -277,36 +308,24 @@
         sel.addRange(range);
         document.execCommand('copy');
         sel.removeAllRanges();
-        setStatus('تم تحديد النص — انسخه يدويًا (Ctrl+C) ✅');
+        setStatus('Selected output text — press Ctrl+C ✅');
       }
-    }
-
-    function downloadJSON() {
-      const blob = new Blob([els.output.textContent], { type: 'application/json;charset=utf-8' });
-      const url = URL.createObjectURL(blob);
-      const a = document.createElement('a');
-      a.href = url;
-      const namePart = (els.studentName.value || 'question').trim().replace(/\s+/g,'_');
-      a.download = `${namePart || 'question'}_L${els.level.value}.json`;
-      document.body.appendChild(a);
-      a.click();
-      a.remove();
-      URL.revokeObjectURL(url);
-      setStatus('تم تحميل ملف JSON ✅');
     }
 
     function resetAll() {
       els.studentName.value = '';
       els.level.value = '7';
       els.question.value = '';
-      // reset choices
+
       const radios = [...document.querySelectorAll('input[name="answer"]')];
       radios.forEach(r => r.checked = false);
       radios[0].checked = true;
+
       const choiceInputs = [...document.querySelectorAll('input[data-choice]')];
-      choiceInputs.forEach((i) => i.value = '');
+      choiceInputs.forEach(i => i.value = '');
+
       update();
-      setStatus('تم مسح الحقول ✅');
+      setStatus('Reset done ✅');
     }
 
     let statusTimer;
@@ -319,15 +338,14 @@
     // Init
     buildChoices();
 
-    // Prefill example to help users
+    // Prefill example
     els.studentName.value = 'Abdalmohaymen Alesmaeel';
     els.question.value = "What is the output of the following Java code?\n\nint result = 0;\nfor (int i = 1; i <= 5; i++) {\n    if (i == 4) {\n        break;\n    }\n    result += i;\n}\nSystem.out.println(result);";
-    // Set default choices for demo
     const demo = ['6','10','7','15'];
     [...document.querySelectorAll('input[data-choice]')].forEach((i, idx) => i.value = demo[idx]);
     update();
 
-    // Live update events
+    // Live update
     els.studentName.addEventListener('input', update);
     els.level.addEventListener('change', update);
     els.question.addEventListener('input', update);
@@ -340,7 +358,6 @@
 
     // Buttons
     els.copyBtn.addEventListener('click', copyJSON);
-    els.downloadBtn.addEventListener('click', downloadJSON);
     els.resetBtn.addEventListener('click', resetAll);
   </script>
 </body>
